docs/api/qiskit-ibm-runtime/0.21/options-simulator-options.mdx
---
title: SimulatorOptions (v0.21)
description: API reference for qiskit_ibm_runtime.options.SimulatorOptions in qiskit-ibm-runtime v0.21
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.SimulatorOptions
---

# SimulatorOptions

<Class id="qiskit_ibm_runtime.options.SimulatorOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/options/simulator_options.py#L33-L105" signature="SimulatorOptions(*args, **kwargs)" modifiers="class">
  Simulator options.

  For best practice in simulating a backend make sure to pass the basis gates and coupling map of that backend.

  **Parameters**

  *   **noise\_model** – Noise model for the simulator.
  *   **seed\_simulator** – Random seed to control sampling.
  *   **coupling\_map** – Directed coupling map to target in mapping. If the coupling map is symmetric, both directions need to be specified. Each entry in the list specifies a directed two-qubit interactions, e.g: `[[0, 1], [0, 3], [1, 2], [1, 5], [2, 5], [4, 1], [5, 3]]`
  *   **basis\_gates** – List of basis gate names to unroll to. For example, `['u1', 'u2', 'u3', 'cx']`. Unrolling is not done if not set.

  ## Attributes

  ### basis\_gates

  <Attribute id="qiskit_ibm_runtime.options.SimulatorOptions.basis_gates" attributeTypeHint="UnsetType | List[str]" attributeValue="Unset" />

  ### coupling\_map

  <Attribute id="qiskit_ibm_runtime.options.SimulatorOptions.coupling_map" attributeTypeHint="UnsetType | List[List[int]] | CouplingMap" attributeValue="Unset" />

  ### noise\_model

  <Attribute id="qiskit_ibm_runtime.options.SimulatorOptions.noise_model" attributeTypeHint="UnsetType | dict | NoiseModel | None" attributeValue="Unset" />

  ### seed\_simulator

  <Attribute id="qiskit_ibm_runtime.options.SimulatorOptions.seed_simulator" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ## Methods

  ### set\_backend

  <Function id="qiskit_ibm_runtime.options.SimulatorOptions.set_backend" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/options/simulator_options.py#L79-L105" signature="set_backend(backend)">
    Set backend for simulation. This method changes noise\_model, coupling\_map, basis\_gates according to given backend.

    **Parameters**

    **backend** (`Union`\[`BackendV1`, `BackendV2`]) – backend to be set.

    **Raises**

    **MissingOptionalLibraryError** – if qiskit-aer is not found.

    **Return type**

    `None`
  </Function>
</Class>

